--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -337,7 +337,10 @@
 			timerIntervalId = setInterval(function(){
 				seconds--;
 				remainingTime = seconds;
+
+				document.getElementById('timer').style.display = "";
 				document.getElementById('remainingTime').style.width = remainingTime / totalTime * 100 + "%";
+
 				timerDiv.innerHTML = seconds;
 				if(seconds === 0){
 					clearInterval(timerIntervalId);
@@ -349,6 +352,7 @@
 			var timerDiv = document.getElementById('countdown');
 			clearInterval(timerIntervalId);
 			timerDiv.style.display = "none";
+			document.getElementById('timer').style.display = "none";
 		}
 
 		function updatePLayerSubmissionStatus(playermap) {
@@ -384,19 +388,50 @@
 	<div id='timer'>
 		<span id='remainingTime'>
 		</span>
+		<div id='waiting'>
+			<img src="dancing.gif">
+		</div>
 	</div>
 
-	<div id="createroom">
-	<input type="text" id="messagebox" placeholder="Your team name"><br>
-	<button onclick="createRoom()">Create a room</button>
-	<br>
-	<div id="roomiddiv"></div>
+
+
+	<!-- PRIMARY SECTION -->
+	<div id='section-main'>
+		<div id="createroom">
+			<input type="text" id="messagebox" placeholder="Your team name"><br>
+			<button onclick="createRoom()">Create a room</button>
+			<br>
+			<div id="roomiddiv"></div>
+		</div>
+		<div id='actionItem' style='display:none'></div>
+
+		<!-- INSTRUCTIONS -->
+		<div id='beginVoting' style="display:none">Vote on your phones now!</div>
+		<div id='submitSads' style="display:none">Start submitting sads!</div>
+		<div id='discussSads' style="display:none">Discuss Sads</div>
+		<div id='submitHappies' style="display:none">Start submitting happies!</div>
+		<div id='discussHappies' style="display:none">Discuss Sads</div>
+
 	</div>
+
+	<!-- PLAYER LIST -->
+	<div id='section-players'>
+		<div id='playersubmissionstatus' style="display:none"></div>
+		<div id='players'></div>
+	</div>
+
+	<!-- CONTROL BUTTONS -->
+	<div id='section-buttons'>
+
+		<div id='continue'>
+		<button onclick="everyoneIn()">Everyone's in!</button>
+		</div>
+
+	</div>
+	
 	<div id="response-div"></div>
 	
-	<div id='continue'>
-	<button onclick="everyoneIn()">Everyone's in!</button>
-	</div>
+
 
 	<div id='feels' style="display:none">Select your Game!
 	<button onclick="loadFeels()">#Feels</button></div>
@@ -417,28 +452,26 @@
 	<div id='voteButton' style="display:none">
 	<button onclick="beginVoting()">Begin Voting</button></div>
 	
-	<div id='actionItem' style='display:none'></div>
 	
-	<div id='beginVoting' style="display:none">Vote on your phones now!</div>
+	
+	
 	
 	<div id='voteResults' style="display:none"></div>
 	
 	<div id='actionResults' style="display:none"></div>	
 
-	<div id='submitSads' style="display:none">Start submitting sads!</div>
 	
-	<div id='discussSads' style="display:none">Discuss Sads</div>
+	
+	
 	<div id='sadsList' style="display:none"></div>
 	<div id='sadsVoteButton' style="display:none">
-	<button onclick="sadsVoting()">Vote</button></div>
-
-	<div id='sadsResults' style="display:none">Results:<br>
-	<button onclick="startNewActionItemsPhase()">Done</button>
+		<button onclick="sadsVoting()">Vote</button>
 	</div>
 
-	<div id='submitHappies' style="display:none">Start submitting happies!</div>
+	<div id='sadsResults' style="display:none">Results:<br>
+		<button onclick="startNewActionItemsPhase()">Done</button>
+	</div>
 	
-	<div id='discussHappies' style="display:none">Discuss Sads</div>
 	<div id='happiesList' style="display:none"></div>
 	<div id='happiesVoteButton' style="display:none">
 	<button onclick="happiesVoting()">Vote</button></div>
@@ -446,14 +479,13 @@
 	<div id='happiesResults' style="display:none">Results:<br></div>
 
 	<div id="newActionItemSection" style="display:none">
-	<input type="text" id="newactionitembox"><br>
-	<button onclick="sendNewActionItem()">Submit action item</button><br>
-	<button onclick="beginHappiesPhase()">Move on to Happies</button>
+		<input type="text" id="newactionitembox"><br>
+		<button onclick="sendNewActionItem()">Submit action item</button><br>
+		<button onclick="beginHappiesPhase()">Move on to Happies</button>
 	</div>
 
-	<div id='waiting' style="display:none"><img src="dancing.gif"></div>
+
 	<div id='countdown' style="display:none"></div>
-	<div id='playersubmissionstatus' style="display:none"></div>
-	<div id='players'></div>
+
 </body>
 </html>
