--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -385,7 +385,7 @@
 		}
 	</script>
 
-	<div id='timer'>
+	<div id='timer' style="display: none;">
 		<span id='remainingTime'>
 		</span>
 		<div id='waiting'>
@@ -410,7 +410,7 @@
 		<div id='submitSads' style="display:none">Start submitting sads!</div>
 		<div id='discussSads' style="display:none">Discuss Sads</div>
 		<div id='submitHappies' style="display:none">Start submitting happies!</div>
-		<div id='discussHappies' style="display:none">Discuss Sads</div>
+		<div id='discussHappies' style="display:none">Discuss Happies</div>
 
 	</div>
 
