--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -405,6 +405,12 @@
 		</div>
 		<div id='actionItem' style='display:none'></div>
 
+		<!-- PICK SPRINT NAME -->
+		<div id='newSprint' style="display:none">
+			<input type="text" id="sprintbox" placeholder="Name your sprint">
+			<button onclick="sprintNamed()">Enter</button>
+		</div>
+
 		<!-- INSTRUCTIONS -->
 		<div id='beginVoting' style="display:none">Vote on your phones now!</div>
 		<div id='submitSads' style="display:none">Start submitting sads!</div>
@@ -412,80 +418,75 @@
 		<div id='submitHappies' style="display:none">Start submitting happies!</div>
 		<div id='discussHappies' style="display:none">Discuss Happies</div>
 
+		<!-- PICK GAME -->
+		<div id='feels' style="display:none">Select your Game!
+		  <button onclick="loadFeels()">#Feels</button>
+		</div>
+
+		<!-- FEELS MENU -->
+		<div id='feelsMenu' style="display:none">Let's talk about our feelings.<br>
+			<button onclick="gameRules()">Game Rules</button><br>
+			<button onclick="prevSprint()">Previous Sprints</button><br>
+			<button onclick="newSprint()">New Sprint</button>
+		</div>
+		
+		<div id="newActionItemSection" style="display:none">
+			<input type="text" id="newactionitembox"><br>
+			<button onclick="sendNewActionItem()">Submit action item</button><br>
+			<button onclick="beginHappiesPhase()">Move on to Happies</button>
+		</div>
+
+		<div id='listActionItems' style="display:none">Here are the incomplete action items</div>
+		<div id='actionList' style="display:none"></div>
+		
+		
+		<div id='voteResults' style="display:none"></div>
+		<div id='actionResults' style="display:none"></div>	
+		<div id='sadsList' style="display:none"></div>
+		<div id='sadsResults' style="display:none">Results:<br>
+			<button onclick="startNewActionItemsPhase()">Done</button>
+		</div>
+		<div id='happiesList' style="display:none"></div>
+
+		<div id='happiesResults' style="display:none">Results:<br></div>
+
 	</div>
 
 	<!-- PLAYER LIST -->
 	<div id='section-players'>
 		<div id='playersubmissionstatus' style="display:none"></div>
 		<div id='players'></div>
+		<div id='countdown' style="display:none"></div>
 	</div>
 
 	<!-- CONTROL BUTTONS -->
 	<div id='section-buttons'>
 
 		<div id='continue'>
-		<button onclick="everyoneIn()">Everyone's in!</button>
+			<button onclick="everyoneIn()">Everyone's in!</button>
 		</div>
 
+
+		<div id='voteButton' style="display:none">
+			<button onclick="beginVoting()">Begin Voting</button>
+		</div>
+
+		<div id='sadsVoteButton' style="display:none">
+			<button onclick="sadsVoting()">Vote</button>
+		</div>
+
+		<div id='happiesVoteButton' style="display:none">
+			<button onclick="happiesVoting()">Vote</button>
+		</div>
 	</div>
+
 	
 	<div id="response-div"></div>
-	
+		
 
 
-	<div id='feels' style="display:none">Select your Game!
-	<button onclick="loadFeels()">#Feels</button></div>
-
-	<div id='feelsMenu' style="display:none">Let's talk about our feelings.<br>
-	<button onclick="gameRules()">Game Rules</button><br>
-	<button onclick="prevSprint()">Previous Sprints</button><br>
-	<button onclick="newSprint()">New Sprint</button></div>
-	
-	<div id='newSprint' style="display:none">
-	<input type="text" id="sprintbox" placeholder="Name your sprint">
-	<button onclick="sprintNamed()">Enter</button></div>
-	
-	<div id='listActionItems' style="display:none">Here are the incomplete action items</div>
-	
-	<div id='actionList' style="display:none"></div>
-	
-	<div id='voteButton' style="display:none">
-	<button onclick="beginVoting()">Begin Voting</button></div>
-	
-	
-	
-	
-	
-	<div id='voteResults' style="display:none"></div>
-	
-	<div id='actionResults' style="display:none"></div>	
 
 	
-	
-	
-	<div id='sadsList' style="display:none"></div>
-	<div id='sadsVoteButton' style="display:none">
-		<button onclick="sadsVoting()">Vote</button>
-	</div>
-
-	<div id='sadsResults' style="display:none">Results:<br>
-		<button onclick="startNewActionItemsPhase()">Done</button>
-	</div>
-	
-	<div id='happiesList' style="display:none"></div>
-	<div id='happiesVoteButton' style="display:none">
-	<button onclick="happiesVoting()">Vote</button></div>
-
-	<div id='happiesResults' style="display:none">Results:<br></div>
-
-	<div id="newActionItemSection" style="display:none">
-		<input type="text" id="newactionitembox"><br>
-		<button onclick="sendNewActionItem()">Submit action item</button><br>
-		<button onclick="beginHappiesPhase()">Move on to Happies</button>
-	</div>
-
-
-	<div id='countdown' style="display:none"></div>
 
 </body>
 </html>
