--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -19,7 +19,8 @@
 
 		function createRoom() {
 			var messageBox = document.getElementById('messagebox');
-                        var textToSend = messageBox.value;
+            var textToSend = messageBox.value;
+            document.getElementById('continue').style.display = "";
 
 			exampleSocket.send(JSON.stringify({
 				action: 'init',
@@ -462,7 +463,7 @@
 	<!-- CONTROL BUTTONS -->
 	<div id='section-buttons'>
 
-		<div id='continue'>
+		<div id='continue' style="display:none">
 			<button onclick="everyoneIn()">Everyone's in!</button>
 		</div>
 
