--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -437,20 +437,22 @@
 			<button onclick="beginHappiesPhase()">Move on to Happies</button>
 		</div>
 
+	</div>
+
+	<!-- SECONDARY SECTION -->
+	<div id='section-secondary'>
 		<div id='listActionItems' style="display:none">Here are the incomplete action items</div>
 		<div id='actionList' style="display:none"></div>
-		
-		
-		<div id='voteResults' style="display:none"></div>
-		<div id='actionResults' style="display:none"></div>	
-		<div id='sadsList' style="display:none"></div>
 		<div id='sadsResults' style="display:none">Results:<br>
 			<button onclick="startNewActionItemsPhase()">Done</button>
 		</div>
+		<div id='voteResults' style="display:none"></div>
+		<div id='actionResults' style="display:none"></div>	
+		<div id='sadsList' style="display:none"></div>
+		
 		<div id='happiesList' style="display:none"></div>
 
 		<div id='happiesResults' style="display:none">Results:<br></div>
-
 	</div>
 
 	<!-- PLAYER LIST -->
