--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -400,8 +400,7 @@
 	<div id='section-main'>
 		<div id="createroom">
 			<input type="text" id="messagebox" placeholder="Your team name"><br>
-			<button onclick="createRoom()">Create a room</button>
-			<br>
+			<button onclick="createRoom()">Create a room</button><br>
 			<div id="roomiddiv"></div>
 		</div>
 		<div id='actionItem' style='display:none'></div>
