--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -88,7 +88,6 @@
 					break;
 				case 'REVIEW_ACTION_ITEMS':
 					if(message.whoVoted){
-						document.getElementById('playersubmissionstatus').style.display = "";
 						document.getElementById('players').style.display = "";
 						updatePLayerSubmissionStatus(message.whoVoted);
 					}
@@ -104,7 +103,7 @@
 					}
 					break;
 				case 'SHOW_ACTION_ITEMS_RESULTS':
-					document.getElementById('playersubmissionstatus').style.display = "none";
+					document.getElementById('players').style.display = "none";
 					document.getElementById('actionResults').style.display = "";
 					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
@@ -112,7 +111,6 @@
 					break;
 				case 'SUBMIT_SADS':
 					if(message.whoSubmitted){
-						document.getElementById('playersubmissionstatus').style.display = "";
 						document.getElementById('players').style.display = "";
 						updatePLayerSubmissionStatus(message.whoSubmitted);
 					}
@@ -134,7 +132,6 @@
 					break;
 				case 'VOTE_SADS':
 					if(message.whoVoted){
-						document.getElementById('playersubmissionstatus').style.display = "";
 						document.getElementById('players').style.display = "";
 						updatePLayerSubmissionStatus(message.whoVoted);
 					}
@@ -150,7 +147,7 @@
                     }
 					break;
 				case 'VIEW_ALL_SADS':
-					document.getElementById('playersubmissionstatus').style.display = "none";
+					document.getElementById('players').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
 					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('sadsResults').style.display = "";
@@ -160,21 +157,20 @@
 					});
 					break;
 				case 'CREATE_ACTION_ITEMS':
-					document.getElementById('playersubmissionstatus').style.display = "none";
 					//document.getElementById('sadsResults').style.display = "none";
 					hideTimer();
+					document.getElementById('players').style.display = "none";
 					document.getElementById('newActionItemSection').style.display = "";
 					break;
 				case 'SUBMIT_HAPPIES':
 					if(message.whoSubmitted){
-						document.getElementById('playersubmissionstatus').style.display = "";
 						document.getElementById('players').style.display = "";
 						updatePLayerSubmissionStatus(message.whoSubmitted);
 					}
 					document.getElementById('submitHappies').style.display = "";
 					break;
 				case 'DISCUSS_HAPPIES':
-					document.getElementById('playersubmissionstatus').style.display = "none";
+					document.getElementById('players').style.display = "none";
 					document.getElementById('submitHappies').style.display = "none";
 					document.getElementById('discussHappies').style.display = "";
 					document.getElementById('happiesList').style.display = "";
@@ -186,7 +182,6 @@
 					break;
 				case 'VOTE_HAPPIES':
 					if(message.whoVoted){
-						document.getElementById('playersubmissionstatus').style.display = "";
 						document.getElementById('players').style.display = "";
 						updatePLayerSubmissionStatus(message.whoVoted);
 					}
@@ -202,7 +197,6 @@
                     }
 					break;
 				case 'VIEW_ALL_HAPPIES':
-					document.getElementById('playersubmissionstatus').style.display = "none";
 					document.getElementById('actionItem').style.display = "none";
 					document.getElementById('voteResults').style.display = "none";
 					document.getElementById('happiesResults').style.display = "";
@@ -375,8 +369,6 @@
 				}
 				text += '<br>';
 			}
-
-			document.getElementById('playersubmissionstatus').innerHTML = text;
 		}
 
 
@@ -410,19 +402,19 @@
 
 		<!-- PICK SPRINT NAME -->
 		<div id='newSprint' style="display:none">
-			<input type="text" id="sprintbox" placeholder="Name your sprint">
+			<input type="text" id="sprintbox" placeholder="Name your sprint"><br>
 			<button onclick="sprintNamed()">Enter</button>
 		</div>
 
 		<!-- INSTRUCTIONS -->
-		<div id='beginVoting' style="display:none">Vote on your phones now!</div>
+	
 		<div id='submitSads' style="display:none">Start submitting sads!</div>
 		<div id='discussSads' style="display:none">Discuss Sads</div>
 		<div id='submitHappies' style="display:none">Start submitting happies!</div>
 		<div id='discussHappies' style="display:none">Discuss Happies</div>
 
 		<!-- PICK GAME -->
-		<div id='feels' style="display:none">Select your Game!
+		<div id='feels' style="display:none">Select your Game!<br>
 		  <button onclick="loadFeels()">#Feels</button>
 		</div>
 
@@ -443,6 +435,8 @@
 
 	<!-- SECONDARY SECTION -->
 	<div id='section-secondary'>
+		<div id='beginVoting' style="display:none">Vote on your phones now!</div>
+
 		<div id='listActionItems' style="display:none">Here are the incomplete action items</div>
 		<div id='actionList' style="display:none"></div>
 		<div id='sadsResults' style="display:none">Results:<br>
@@ -459,7 +453,6 @@
 
 	<!-- PLAYER LIST -->
 	<div id='section-players'>
-		<div id='playersubmissionstatus' style="display:none"></div>
 		<div id='players'></div>
 		<div id='countdown' style="display:none"></div>
 	</div>
