removed hanging playersubmissionstatus div

--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -120,7 +120,7 @@
 					document.getElementById('submitSads').style.display = "";
 					break;
 				case 'DISCUSS_SADS':
-					document.getElementById('playersubmissionstatus').style.display = "none";
+					document.getElementById('players').style.display = "none";
 					document.getElementById('submitSads').style.display = "none";
 					document.getElementById('discussSads').style.display = "";
 					document.getElementById('sadsList').style.display = "";
