--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -483,7 +483,7 @@
 			<button onclick="happiesVoting()">Vote</button>
 		</div>
 
-		<div id='sadsresultsbutton'>
+		<div id='sadsresultsbutton' style="display:none">
 			<button onclick="startNewActionItemsPhase()">Done</button>
 		</div>
 	</div>
