moved things around

--- a/masterapp/index.html
+++ b/masterapp/index.html
@@ -446,15 +446,14 @@
 
 		<div id='listActionItems' style="display:none">Here are the incomplete action items<br></div>
 		<div id='actionList' style="display:none"><ul></ul></div>
-		<div id='sadsResults' style="display:none">Results:<br>	
-		</div>
-		<div id='voteResults' style="display:none"></div>
-		<div id='actionResults' style="display:none"></div>	
+		
+		
+		
 		<div id='sadsList' style="display:none"></div>
 		
 		<div id='happiesList' style="display:none"></div>
 
-		<div id='happiesResults' style="display:none">Results:<br></div>
+		
 
 		<div id='oldSprints' style="display:none"><img src="/graph-1.png"></div>
 	</div>
@@ -489,6 +488,15 @@
 			<button onclick="startNewActionItemsPhase()">Done</button>
 		</div>
 	</div>
+
+	<!-- BELOW PLAYER LIST -->
+	<div id='section-under'>
+		<div id='actionResults' style="display:none"></div>	
+		<div id='happiesResults' style="display:none">Results:<br></div>
+		<div id='voteResults' style="display:none"></div>
+		<div id='sadsResults' style="display:none">Results:<br></div>
+	</div>
+
 
 	
 	<div id="response-div"></div>
